--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +17,17 @@
 </head>
 
 <body>
+    <div id="app" class="h-screen w-full bg-gray-200 flex items-start justify-start">
+        <img src="./images/1.jpg" class="w-1/3 h-full">
+        <div class="w-full flex items-center justify-end">
+            <i class="material-icons">face</i>
+            <p class="font-semibold text-xl tracking-wider uppercase px-3"> {​​{​​ msg }​​}​​</p>
+        </div>
+    </div>
 
+    
+    <!-- my main.js -->
+    <script src="./main.js"></script>
 </body>
 
 </html>
