--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
         <img src="./images/1.jpg" class="w-1/3 h-full">
         <div class="w-full flex items-center justify-end">
             <i class="material-icons">face</i>
-            <p class="font-semibold text-xl tracking-wider uppercase px-3"> {​​{​​ msg }​​}​​</p>
+            <p class="font-semibold text-xl tracking-wider uppercase px-3">{{ msg }}</p>
         </div>
     </div>
-
-    
     <!-- my main.js -->
     <script src="./main.js"></script>
 </body>
