--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
     <!-- https://v3.vuejs.org/guide/installation.html#release-notes -->
     <!-- Vue CDN -->
     <script src="https://unpkg.com/vue@next"></script>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <script src='https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js'></script>
 </head>
 
 <body>
-    <div id="app" class="h-screen w-full bg-gray-200 flex items-start justify-start">
-        <img src="./images/1.jpg" class="w-1/3 h-full">
-        <div class="w-full flex items-center justify-end">
-            <i class="material-icons">face</i>
-            <p class="font-semibold text-xl tracking-wider uppercase px-3">{{ msg }}</p>
+    <div id="app">
+        <h1 class="text-center pt-10 text-3xl p-6">Like Pic ({{picCount}})</h1><br>
+        <div class="grid max-w-4xl mx-auto p-8" v-for="(pic,i) in pics">
+            <a class="bg-white rounded h-full text-grey-darkest no-underline shadow-md w-1/4" @click="likePic(i)">
+                <h1 class="text-3xl p-6">{{pic.name}}</h1>
+                <img class="w-full block rounded-b" v-bind:src="pic.url" alt="A photo of a fox">
+                <img src="https://www.flaticon.com/svg/vstatic/svg/929/929417.svg?token=exp=1612931256~hmac=8e7aa389989a92e1c1894632f695c382"
+                    class="mx-auto w-10 rounded-b" v-show="pic.like">
+            </a>
         </div>
     </div>
     <!-- my main.js -->
