[update] save preview and fix some bug

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 </head>
 
 <body>
+
     <div id="app">
-        <h1 class="text-center pt-10 text-3xl p-6">Like Pic ({{picCount}})</h1><br>
-        <div class="grid max-w-4xl mx-auto p-8" v-for="(pic,i) in pics">
+        <h1 class="text-center pt-10 text-3xl p-6">Like Pic ({{picCount}})</h1>
+        <div class="grid max-w-2xl mx-auto p-8 " v-for="(pic,i) in pics" >
             <a class="bg-white rounded h-full text-grey-darkest no-underline shadow-md w-1/4" @click="likePic(i)">
                 <h1 class="text-3xl p-6">{{pic.name}}</h1>
                 <img class="w-full block rounded-b" v-bind:src="pic.url" alt="A photo of a fox">
@@ -30,8 +31,11 @@
             </a>
         </div>
     </div>
+
     <!-- my main.js -->
+
     <script src="./main.js"></script>
+
 </body>
 
 </html>
